# OkIncrementUpdate

./: OkIncrementUpdate签名信息.txt  README.md  README_ZH.md  keystore.jks
app/: build.gradle
app/src/androidTest/java/com/liu/climb/okincrementupdate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app-release-new.apk  app-release-old.apk
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/liu/climb/okincrementupdate/: Constant.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/liu/climb/okincrementupdate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
update/: build.gradle
update/src/androidTest/java/com/liu/climb/update/: ExampleInstrumentedTest.java
update/src/main/: AndroidManifest.xml
update/src/main/cpp/: CMakeLists.txt  README
update/src/main/cpp/diff/: CMakeLists.txt  Diff.c  Diff.h  sven_com_apkpatchserver_DiffUtils.h
update/src/main/cpp/patch/: CMakeLists.txt  PatchUtils.c  PatchUtils.h  sven_com_apkpatchserver_PatchUtils.h
update/src/main/java/com/liu/climb/update/: Test.java
update/src/main/java/com/liu/climb/update/increment/: DiffUtils.java  PatchUtils.java
update/src/main/java/com/liu/climb/update/util/: ApkUtils.java  FileUtils.java
update/src/test/java/com/liu/climb/update/: ExampleUnitTest.java
